releaselogs/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: releaselogs
  labels:
    app.kubernetes.io/name: releaselogs
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: releaselogs
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
    - name: https
      port: 3443
      targetPort: https
      protocol: TCP
